[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pyql"
version = "0.0.1"
authors = [
  { name="Benny Huang", email="j.benny.huang@gmail.com" },
]
description = "Programmatic SQL in Python"
readme = "README.md"
license = { file="LICENSE" }
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/pypa/sampleproject"
"Bug Tracker" = "https://github.com/pypa/sampleproject/issues"